2013-09-03  Holger Seelig  <holger.seelig@yahoo.de>

	* Loader.cpp:
	* X3DBrowser.cpp:
	* ShaderPart.h:
	* ShaderPart.cpp:
	* X3DShapeNode.cpp:
	* ShaderProgram.h:
	* X3DShaderNode.h:
	* ProgramShader.h:
	* PackagedShader.h:
	* ComposedShader.h:
	* X3DShaderNode.cpp:
	* ProgramShader.cpp:
	* ShaderProgram.cpp:
	* PackagedShader.cpp:
	* ComposedShader.cpp:
	* FloatVertexAttribute.cpp:
	* X3DProgrammableShaderObject.h:
	* X3DProgrammableShaderObject.cpp: 

2013-09-02  Holger Seelig  <holger.seelig@yahoo.de>

	* Loader.cpp:
	* Extrusion.cpp: 

2013-09-01  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* libtitania-x3d.cproj:
	* Core.h:
	* MetadataBool.h:
	* MetadataBool.cpp:
	* SupportedNodes.cpp:
	* MetadataBoolean.h:
	* ColorDamper.h:
	* MetadataBoolean.cpp:
	* X3DBindableNode.cpp:
	* ScalarChaser.h:
	* X3DChaserNode.h:
	* ColorDamper.cpp:
	* ScalarChaser.cpp:
	* PositionDamper.h:
	* PositionChaser.h:
	* X3DMetadataObject.cpp:
	* X3DFollowerNode.h:
	* X3DChaserNode.cpp:
	* PositionDamper2D.h:
	* TexCoordDamper2D.h:
	* PositionChaser2D.h:
	* PositionChaser.cpp:
	* CoordinateDamper.h:
	* PositionDamper.cpp:
	* X3DFollowerNode.cpp:
	* OrientationChaser.h:
	* KeySensor.cpp:
	* OrientationDamper.h:
	* PositionDamper2D.cpp:
	* CoordinateDamper.cpp:
	* TexCoordDamper2D.cpp:
	* PositionChaser2D.cpp:
	* OrientationDamper.cpp:
	* OrientationChaser.cpp: 

2013-08-24  Holger Seelig  <holger.seelig@yahoo.de>

	* KeyDevice.h:
	* KeyDevice.cpp:
	* KeySensor.h:
	* KeySensor.cpp:
	* StringSensor.h:
	* StringSensor.cpp:
	* X3DKeyDeviceSensorNode.h: 

2013-08-24  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* X3D.h:
	* libtitania-x3d.cproj:
	* Router.h:
	* Parser.cpp:
	* Browser.h:
	* Router.cpp:
	* Browser.cpp:
	* X3DBrowser.h:
	* Loader.h:
	* X3DBrowser.cpp:
	* Loader.cpp:
	* PointingDevice.h:
	* ExternProto.cpp:
	* PointingDevice.cpp:
	* X3DBrowserContext.h:
	* KeyDevice.h:
	* Script.h:
	* KeyDevice.cpp:
	* X3DBrowserContext.cpp:
	* Inline.h: